allow input configuration

--- a/projects/frontend/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/projects/frontend/locale/fr_FR/LC_MESSAGES/messages.po
@@ -231,9 +231,9 @@ msgstr "GAUCHE"
 msgid "RIGHT"
 msgstr "DROITE"
 msgid "PAGE UP"
-msgstr "PAGE PRECEDENTE"
+msgstr "L1 (PAGE PRECEDENTE)"
 msgid "PAGE DOWN"
-msgstr "PAGE SUIVANTE"
+msgstr "R1 (PAGE SUIVANTE)"
 
 msgid "SAVE CHANGES?"
 msgstr "SAUVEGARDER ?"
