joystick config ok

--- a/projects/frontend/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/projects/frontend/locale/fr_FR/LC_MESSAGES/messages.po
@@ -107,7 +107,7 @@ msgstr "SELECTION RAPIDE DU SYSTEME"
 msgid "THEME SET"
 msgstr "THEME"
 msgid "CONFIGURE INPUT"
-msgstr "CONFIGURER LA MANETTE"
+msgstr "CONFIGURER LES MANETTES"
 msgid "QUIT"
 msgstr "QUITTER"
 msgid "REALLY RESTART?"
@@ -252,3 +252,12 @@ msgid "UPDATE OK, THE SYSTEM WILL NOW REBOOT"
 msgstr "MISE A JOUR EFFECTUEE, REDEMARRAGE EN COURS"
 msgid "UPDATE FAILED, THE SYSTEM WILL NOW REBOOT"
 msgstr "ECHEC DE LA MISE A JOUR"
+
+
+#GUIMENU
+msgid "CONFIGURE A CONTROLLER"
+msgstr "CONFIGURER UNE MANETTE"
+msgid "INPUT P1"
+msgstr "MANETTE J1"
+msgid "INPUT P2"
+msgstr "MANETTE J2"
