--- a/projects/frontend/locale/fr_FR/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/fr_FR/LC_MESSAGES/emulationstation2.po
@@ -261,3 +261,7 @@ msgid "INPUT P1"
 msgstr "MANETTE J1"
 msgid "INPUT P2"
 msgstr "MANETTE J2"
+msgid "INPUT P3"
+msgstr "MANETTE J3"
+msgid "INPUT P4"
+msgstr "MANETTE J4"
