added welcome text

--- a/projects/frontend/locale/fr_FR/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/fr_FR/LC_MESSAGES/emulationstation2.po
@@ -265,3 +265,6 @@ msgid "INPUT P3"
 msgstr "MANETTE J3"
 msgid "INPUT P4"
 msgstr "MANETTE J4"
+
+msgid "NOGAMEERRORMESSAGE"
+msgstr "AUCUN JEU N'A ETE TROUVE SUR LE SYSTEME !\nVEUILLEZ AJOUTER DES JEUX EN SUIVANT LES INSTRUCTIONS DE LA NOTICE.\n\nRENDEZ-VOUS SUR RETROBOX.FR POUR PLUS D'INFORMATIONS"
