--- a/projects/frontend/locale/en/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/en/LC_MESSAGES/emulationstation2.po
@@ -1,4 +1,14 @@
 #, fuzzy
+msgid ""
+msgstr ""
+"Project-Id-Version: Emulationstation 2.0RC1 ENGLISH po\n"
+"POT-Creation-Date: 2014-09-20 12:00-0500\n"
+"PO-Revision-Date: 2014-09-20 15:00-0500\n"
+"Last-Translator: digitalLumberjack <digitalLumberjack@gmail.com>\n"
+"Language-Team: FRENCH\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 msgid "NOGAMEERRORMESSAGE"
 msgstr "WE CAN'T FIND ANY SYSTEMS!\nCHECK THAT YOUR PATHS ARE CORRECT IN THE SYSTEMS CONFIGURATION FILE, AND YOUR GAME DIRECTORY HAS AT LEAST ONE GAME WITH THE CORRECT EXTENSION.\n\nVISIT RETROBOX.FR FOR MORE INFORMATION."
