--- a/projects/frontend/locale/fr_FR/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/fr_FR/LC_MESSAGES/emulationstation2.po
@@ -268,3 +268,9 @@ msgstr "MANETTE J4"
 
 msgid "NOGAMEERRORMESSAGE"
 msgstr "AUCUN JEU N'A ETE TROUVE SUR LE SYSTEME !\nVEUILLEZ AJOUTER DES JEUX EN SUIVANT LES INSTRUCTIONS DE LA NOTICE.\n\nRENDEZ-VOUS SUR RETROBOX.FR POUR PLUS D'INFORMATIONS"
+
+msgid "LANGUAGE"
+msgstr "LANGUE"
+
+msgid "THE SYSTEM WILL NOW REBOOT"
+msgstr "LE SYSTEME VA REDEMARRER"
