--- a/projects/frontend/locale/fr_FR/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/fr_FR/LC_MESSAGES/emulationstation2.po
@@ -274,3 +274,13 @@ msgstr "LANGUE"
 
 msgid "THE SYSTEM WILL NOW REBOOT"
 msgstr "LE SYSTEME VA REDEMARRER"
+
+
+msgid "INFOS"
+msgstr "INFOS"
+
+msgid "VERSION"
+msgstr "VERSION"
+
+msgid "STORAGE"
+msgstr "STOCKAGE"
