--- a/projects/frontend/locale/pt_PT/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/pt_PT/LC_MESSAGES/emulationstation2.po
@@ -274,3 +274,13 @@ msgstr "IDIOMA"
 
 msgid "THE SYSTEM WILL NOW REBOOT"
 msgstr "REINICIANDO SISTEMA"
+
+
+msgid "INFOS"
+msgstr "INFORMAÇÕES"
+
+msgid "VERSION"
+msgstr "VERSÃO"
+
+msgid "STORAGE"
+msgstr "ARMAZENAMENTO"
