--- a/projects/frontend/locale/lang/fr_FR/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/lang/fr_FR/LC_MESSAGES/emulationstation2.po
@@ -288,5 +288,5 @@ msgstr "STOCKAGE"
 msgid "OUTPUT DEVICE"
 msgstr "SORTIE AUDIO"
 
-msgid "SMOOTHING GAMES"
+msgid "SMOOTH GAMES"
 msgstr "LISSER LES JEUX"
