changed message gpio

--- a/projects/frontend/locale/lang/fr/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/lang/fr/LC_MESSAGES/emulationstation2.po
@@ -293,3 +293,6 @@ msgstr "LISSER LES JEUX"
 
 msgid "GPIO CONTROLLERS"
 msgstr "MANETTES SUR GPIO"
+
+msgid "GPIO CONTROLLERS ARE NOW ON"
+msgstr "LES MANETTES SUR GPIO SONT ACTIVES"
