--- a/projects/frontend/locale/lang/fr/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/lang/fr/LC_MESSAGES/emulationstation2.po
@@ -296,3 +296,6 @@ msgstr "MANETTES SUR GPIO"
 
 msgid "GPIO CONTROLLERS ARE NOW ON"
 msgstr "LES MANETTES SUR GPIO SONT ACTIVES"
+
+msgid "AN UPDATE IS AVAILABLE FOR YOUR RECALBOX"
+msgstr "UNE MISE A JOUR EST DISPONIBLE POUR VOTRE RECALBOX"
