--- a/projects/frontend/locale/lang/fr/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/lang/fr/LC_MESSAGES/emulationstation2.po
@@ -299,3 +299,6 @@ msgstr "LES MANETTES SUR GPIO SONT ACTIVES"
 
 msgid "AN UPDATE IS AVAILABLE FOR YOUR RECALBOX"
 msgstr "UNE MISE A JOUR EST DISPONIBLE POUR VOTRE RECALBOX"
+
+msgid "NO UPDATE AVAILABLE"
+msgstr "AUCUNE MISE A JOUR DISPONIBLE"
