corrected german translation

--- a/projects/frontend/locale/lang/de/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/lang/de/LC_MESSAGES/emulationstation2.po
@@ -283,7 +283,7 @@ msgid "VERSION"
 msgstr "VERSION"
 
 msgid "STORAGE"
-msgstr "SPEICHER
+msgstr "SPEICHER"
 
 msgid "OUTPUT DEVICE"
 msgstr "AUDIOAUSGANG"
