--- a/projects/frontend/locale/lang/es/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/lang/es/LC_MESSAGES/emulationstation2.po
@@ -1,189 +1,257 @@
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Emulationstation 2.0RC1 SPANISH po\n"
-"POT-Creation-Date: 2015-01-16 12:30-0500\n"
-"PO-Revision-Date: 2015-01-16 15:30-0500\n"
-"Last-Translator: Jose Cerrejon <ulysess@gmail.com>\n"
+"POT-Creation-Date: 2014-09-20 12:00-0500\n"
+"PO-Revision-Date: 2015-03-29 17:02+0100\n"
+"Last-Translator: Antonio López Abad <mrpengo@gmail.com>\n"
 "Language-Team: SPANISH\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.4\n"
+"Language: es\n"
 
 msgid "MAIN MENU"
-msgstr "MENU PRINCIPAL"
+msgstr "MENÚ PRINCIPAL"
+
 msgid "YES"
-msgstr "SI"
+msgstr "SÍ"
+
 msgid "NO"
 msgstr "NO"
 
 #: es-app/src/views/gamelist/DetailedGameListView.cpp
 msgid "Rating: "
-msgstr "Nota : "
+msgstr "Puntuación: "
+
 msgid "Released: "
-msgstr "Liberado : "
+msgstr "Publicado:"
+
 msgid "Developer: "
 msgstr "Desarrollador : "
+
 msgid "Publisher: "
-msgstr "Publicado : "
+msgstr "Editor : "
+
 msgid "Genre: "
-msgstr "Genero : "
+msgstr "Género:"
+
 msgid "Players: "
 msgstr "Jugadores : "
+
 msgid "Last played: "
-msgstr "Ultimo jugador : "
+msgstr "Última partida : "
+
 msgid "Times played: "
-msgstr "Num. partidas : "
+msgstr "Veces jugado : "
 
 #: es-app/src/MetaData.cpp
 msgid "enter game name"
-msgstr "Introduce nombre del juego"
+msgstr "nombre del juego"
 
-
-msgid "NAME" 
+msgid "NAME"
 msgstr "NOMBRE"
+
 msgid "ENTER DESCRIPTION"
-msgstr "DESCRIPCION"
+msgstr "INTRODUCE LA DESCRIPCIÓN"
+
 msgid "ENTER PATH TO IMAGE"
-msgstr "RUTA DE LAS IMAGENES"
+msgstr "INTRODUCE LA RUTA A LA IMAGEN"
+
 msgid "THUMBNAIL"
-msgstr "MINIATURAS"
+msgstr "MINIATURA"
+
 msgid "ENTER PATH TO THUMBNAIL"
-msgstr "RUTA DE LAS MINIATURAS"
+msgstr "INTRODUCE LA RUTA A LA MINIATURA"
+
 msgid "RATING"
-msgstr "NOTA"
+msgstr "CALIFICACIÓN"
+
 msgid "ENTER SCORE"
-msgstr "INTRODUCE RECORD"
+msgstr "INTRODUCE LA CALIFICACIÓN"
+
 msgid "RELEASE DATE"
-msgstr "FECHA LIBERACION"
+msgstr "FECHA DE LANZAMIENTO"
+
 msgid "ENTER RELEASE DATE"
-msgstr "INTRODUCE FECHA LIBERACION"
+msgstr "INTRODUCE LA FECHA DE LANZAMIENTO"
+
 msgid "DEVELOPER"
-msgstr "DESARROLLADOR"
+msgstr "DESARROLADOR"
+
 msgid "ENTER GAME DEVELOPER"
-msgstr "INTRODUCE DESARROLLADOR DEL JUEGO"
+msgstr "INTRODUCE EL NOMBRE DEL DESARROLLADOR"
+
 msgid "PUBLISHER"
-msgstr "EDITORA"
+msgstr "EDITOR"
+
 msgid "ENTER GAME PUBLISHER"
-msgstr "INTRODUCE EDITORA DEL JUEGO"
+msgstr "INTRODUCE EL NOMBRE DEL EDITOR"
+
 msgid "GENRE"
-msgstr "GENERO"
+msgstr "GÉNERO"
+
 msgid "ENTER GAME GENRE"
-msgstr "INTRODUCE GENERO DEL JUEGO"
+msgstr "INTRODUCE EL GÉNERO"
+
 msgid "PLAYERS"
 msgstr "JUGADORES"
+
 msgid "ENTER NUMBER OF PLAYERS"
-msgstr "INTRODUCE NUMERO DE JUGADORES"
+msgstr "INTRODUCE EL NÚMERO DE JUGADORES"
+
 msgid "PLAY COUNT"
-msgstr "PARTIDAS JUGADAS"
+msgstr "Nº DE PARTIDAS"
+
 msgid "ENTER NUMBER OF TIMES PLAYED"
-msgstr "INTRODUCE NUM PARTIDAS JUGADAS"
+msgstr "INTRODUCE EL NÚMERO DE PARTIDAS JUGADAS"
 
 #: es-app/src/guis/GuiMenu.cpp
 msgid "SCRAPE FROM"
-msgstr "SCRAPPER DESDE"
+msgstr "OBTENER DATOS DE"
+
 msgid "SCRAPE RATINGS"
-msgstr "NOTAS DEL SCRAPPER"
+msgstr "OBTENER CALIFICACIONES"
+
 msgid "SOUND SETTINGS"
-msgstr "AJUSTES DEL SONIDO"
+msgstr "CONFIGURACIÓN DE AUDIO"
+
 msgid "SYSTEM VOLUME"
 msgstr "VOLUMEN DEL SISTEMA"
+
 msgid "ENABLE SOUNDS"
 msgstr "ACTIVAR SONIDOS"
+
 msgid "UI SETTINGS"
-msgstr "OPCIONES DE LA INTERFACE"
+msgstr "CONFIGURACIÓN DE LA INTERFAZ"
+
 msgid "SCREENSAVER AFTER"
-msgstr "SALVAPANTALLA TRAS"
+msgstr "SALVAPANTALLAS A LOS"
+
 msgid "TRANSITION STYLE"
-msgstr "ESTILO DE LAS TRANSICIONES"
+msgstr "TIPO DE TRANSICIÓN"
+
 msgid "SCREENSAVER BEHAVIOR"
 msgstr "COMPORTAMIENTO DEL SALVAPANTALLAS"
+
 msgid "SHOW FRAMERATE"
-msgstr "MOSTRAR FRAMERATE"
+msgstr "MOSTRAR LA TASA DE REFRESCO"
+
 msgid "ON-SCREEN HELP"
 msgstr "AYUDA EN PANTALLA"
+
 msgid "QUICK SYSTEM SELECT"
-msgstr "SELECION RAPIDA DEL SISTEMA"
+msgstr "SELECCIÓN RÁPIDA DE SISTEMA"
+
 msgid "THEME SET"
-msgstr "TEMAS"
+msgstr "TEMA"
+
 msgid "CONFIGURE INPUT"
-msgstr "CONFIGURAR LOS MANDOS"
+msgstr "CONFIGURACIÓN DE CONTROLES"
+
 msgid "QUIT"
 msgstr "SALIR"
+
 msgid "REALLY RESTART?"
-msgstr "DESEA REINICIAR ?"
+msgstr "¿REINICIAR?"
+
 msgid "RESTART SYSTEM"
-msgstr "REINICIAR SISTEMA"
+msgstr "REINICIAR EL SISTEMA"
+
 msgid "REALLY SHUTDOWN?"
-msgstr "DESEA APAGAR ?"
+msgstr "¿APAGAR?"
+
 msgid "SHUTDOWN SYSTEM"
-msgstr "APAGANDO"
+msgstr "APAGAR EL SISTEMA"
+
 msgid "REALLY QUIT?"
-msgstr "DESEA SALIR ?"
+msgstr "¿SALIR?"
+
 msgid "QUIT EMULATIONSTATION"
 msgstr "SALIR DE EMULATIONSTATION"
 
-
 #: es-app/src/guis/GuiScraperStart.cpp
 msgid "SCRAPE NOW"
-msgstr "SCRAPE AHORA"
+msgstr "OBTENER DATOS"
+
 msgid "USER DECIDES ON CONFLICTS"
-msgstr "USUARIO DECIDE LOS CONFLICTOS"
+msgstr "DECIDIR EN CASO DE CONFLICTO"
+
 msgid "SYSTEMS"
-msgstr "SISTEMA"
+msgstr "SISTEMAS"
+
 msgid "FILTER"
 msgstr "FILTRO"
+
 msgid "SCRAPE THESE GAMES"
-msgstr "SCRAPE ESTOS JUEGOS"
+msgstr "OBTENER DATOS DE ESTOS JUEGOS"
+
 msgid "SCRAPE THESE SYSTEMS"
-msgstr "SCRAPPER ESTOS SISTEMAS"
+msgstr "OBTENER DATOS DE ESTOS SISTEMAS"
+
 msgid "SELECT ALL"
 msgstr "TODOS"
+
 msgid "SELECT NONE"
 msgstr "NINGUNO"
 
 #: es-app/src/guis/GuiScraperMulti.cpp"
 msgid "SCRAPING IN PROGRESS"
-msgstr "SCRAPING EN PROCESO"
+msgstr "OBTENCIÓN DE DATOS EN CURSO"
 
 #: es-app/src/components/ScraperSearchComponent.cpp
 msgid "NO GAMES FOUND - SKIP"
-msgstr "NO SE ENCONTRARON JUEGOS - OMITIR"
-
+msgstr "NO SE ENCONTRARON JUEGOS - SALTAR"
 
 #: Buttons
 msgid "close"
 msgstr "cerrar"
+
 msgid "select"
 msgstr "seleccionar"
+
 msgid "choose"
-msgstr "elige"
+msgstr "elegir"
+
 msgid "back"
 msgstr "volver"
+
 msgid "CLOSE"
 msgstr "CERRAR"
+
 msgid "SELECT"
 msgstr "SELECCIONAR"
+
 msgid "CHOOSE"
-msgstr "ELIGE"
+msgstr "ELEGIR"
+
 msgid "BACK"
-msgstr "ATRAS"
+msgstr "VOLVER"
+
 msgid "LAUNCH"
 msgstr "LANZAR"
+
 msgid "SYSTEM"
 msgstr "SISTEMA"
+
 msgid "INPUT"
-msgstr "ENTRADA"
+msgstr "EDITAR"
+
 msgid "SKIP"
-msgstr "OMITIR"
+msgstr "SALTAR"
+
 msgid "CHANGE"
 msgstr "CAMBIAR"
+
 msgid "SAVE"
 msgstr "GUARDAR"
+
 msgid "CANCEL"
 msgstr "CANCELAR"
+
 msgid "DELETE"
-msgstr "ELIMINAR"
+msgstr "BORRAR"
+
 msgid "GO BACK"
 msgstr "VOLVER"
 
@@ -193,94 +261,117 @@ msgstr " JUEGOS DISPONIBLES"
 
 #: es-app/src/guis/GuiGamelistOptions.cpp
 msgid "JUMP TO LETTER"
-msgstr "SALTAR A UNA LETRA"
-msgid "SORT GAMES BY"
-msgstr "ORDENAR JUEGOS POR"
-msgid "EDIT THIS GAME'S METADATA"
-msgstr "EDITAR LOS METADATAS DE ESTE JUEGO"
+msgstr "IR A LA LETRA"
 
+msgid "SORT GAMES BY"
+msgstr "ORDENAR LOS JUEGOS POR"
+
+msgid "EDIT THIS GAME'S METADATA"
+msgstr "EDITAR LOS DATOS DE ESTE JUEGO"
 
 #: es-app/src/guis/GuiMetaDataEd.cpp
 msgid "EDIT METADATA"
-msgstr "EDITAR METADATOS"
+msgstr "EDITAR LOS DATOS"
 
 msgid " GAMEPAD"
-msgstr " MANDO"
+msgstr " CONTROLADOR"
+
 msgid " DETECTED"
 msgstr " DETECTADO"
+
 msgid "WELCOME"
 msgstr "BIENVENIDO"
+
 msgid "NO GAMEPADS DETECTED"
-msgstr "NO SE DETECTARON MANDOS"
+msgstr "NO SE DETECTARON CONTROLADORES"
+
 msgid "HOLD A BUTTON ON YOUR DEVICE TO CONFIGURE IT."
-msgstr "MANTEN PULSADO UN BOTON EN TU MANDO PARA CONFIGURARLO"
+msgstr "MANTÉN PULSADO UN BOTÓN DEL CONTROLADOR PARA CONFIGURARLO"
+
 msgid "PRESS F4 TO QUIT AT ANY TIME."
 msgstr "PULSA F4 PARA SALIR EN CUALQUIER MOMENTO"
+
 msgid "PRESS ESC TO CANCEL."
 msgstr "PULSA ESC PARA CANCELAR"
 
 #: es-core/src/guis/GuiInputConfig.cpp
 msgid "CONFIGURING"
-msgstr "CONFIGURACION"
+msgstr "CONFIGURANDO"
+
 msgid "UP"
 msgstr "ARRIBA"
+
 msgid "DOWN"
 msgstr "ABAJO"
+
 msgid "LEFT"
 msgstr "IZQUIERDA"
+
 msgid "RIGHT"
 msgstr "DERECHA"
+
 msgid "PAGE UP"
-msgstr "L1 (PAGINA ANTERIOR)"
+msgstr "L1 (AV. PÁG)"
+
 msgid "PAGE DOWN"
-msgstr "R1 (NUEVA PAGINA)"
+msgstr "R1 (RE. PÁG)"
 
 msgid "SAVE CHANGES?"
-msgstr "GUARDAR CAMBIOS ?"
+msgstr "¿GUARDAR LOS CAMBIOS?"
 
 #: es-app/src/guis/GuiUpdate.cpp
-
 msgid "WORKING..."
-msgstr "PROCESANDO..."
+msgstr "EN CURSO..."
+
 msgid "UPDATE"
-msgstr "ACTUALIZANDO"
+msgstr "ACTUALIZAR"
+
 msgid "REALLY UPDATE?"
-msgstr "DESEA ACTUALIZAR ?"
+msgstr "¿QUIERES ACTUALIZAR EL SISTEMA?"
+
 msgid "NETWORK CONNECTION NEEDED"
-msgstr "ES NECESARIO CONEXION A LA RED"
+msgstr "SE NECESITA UNA CONEXIÓN DE RED"
+
 msgid "UPDATE OK, THE SYSTEM WILL NOW REBOOT"
-msgstr "ACTUALIZACION OK, EL SISTEMA SE REINICIARA AHORA"
+msgstr "ACTUALIZACIÓN FINALIZADA. EL SISTEMA VA A REINICIARSE"
+
 msgid "UPDATE FAILED, THE SYSTEM WILL NOW REBOOT"
-msgstr "FALLO EN LA ACTUALIZACION, EL SISTEMA SE REINICIARA AHORA"
+msgstr "ACTUALIZACIÓN FALLIDA. EL SISTEMA VA A REINICIARSE"
 
-
-#GUIMENU
+# GUIMENU
 msgid "CONFIGURE A CONTROLLER"
-msgstr "CONFIGURAR EL CONTROLADOR"
+msgstr "CONFIGURAR UN CONTROLADOR"
+
 msgid "INPUT P1"
 msgstr "CONTROLADOR J1"
+
 msgid "INPUT P2"
 msgstr "CONTROLADOR J2"
+
 msgid "INPUT P3"
 msgstr "CONTROLADOR J3"
+
 msgid "INPUT P4"
 msgstr "CONTROLADOR J4"
 
 msgid "NOGAMEERRORMESSAGE"
-msgstr "NO SE ENCONTRAROS JUEGOS EN EL SISTEMA!\nAGREGUE LOS JUEGOS SIGUIENDO LAS INSTRUCCIONES.\n\nVISITA RETROBOX.FR PARA MAS INFORMACION"
+msgstr ""
+"¡NO SE HAN ENCONTRADO JUEGOS EN EL SISTEMA !\n"
+"POR FAVOR, SIGUE LAS INSTRUCCIONES PARA AÑADIRLOS.\n"
+"\n"
+"VISÍTANOS EN RETROBOX.FR PARA OBTENER MÁS INFORMACIÓN"
 
 msgid "LANGUAGE"
 msgstr "IDIOMA"
 
 msgid "THE SYSTEM WILL NOW REBOOT"
-msgstr "EL SISTEMA VA A REINICIAR"
+msgstr "EL SISTEMA VA A REINICIARSE"
 
-
-msgid "INFOS"
-msgstr "INFOS"
+msgid "SYSTEM SETTINGS"
+msgstr "CONFIGURACIÓN DEL SISTEMA"
 
 msgid "VERSION"
-msgstr "VERSION"
+msgstr "VERSIÓN"
 
 msgid "STORAGE"
 msgstr "ALMACENAMIENTO"
@@ -289,7 +380,126 @@ msgid "OUTPUT DEVICE"
 msgstr "SALIDA DE AUDIO"
 
 msgid "SMOOTH GAMES"
-msgstr "JUEGOS SENCILLOS"
+msgstr "SUAVIZAR LOS JUEGOS"
+
+msgid "GPIO CONTROLLERS"
+msgstr "CONTROLADORES GPIO"
+
+msgid "GPIO CONTROLLERS ARE NOW ON"
+msgstr "LOS CONTROLADORES GPIO ESTÁN ACTIVADOS"
+
+msgid "AN UPDATE IS AVAILABLE FOR YOUR RECALBOX"
+msgstr "HAY UNA ACTUALIZACIÓN DISPONIBLE PARA TU RECALBOX"
+
+msgid "NO UPDATE AVAILABLE"
+msgstr "NO HAY ACTUALIZACIONES DISPONIBLES"
+
+msgid "DO YOU WANT TO START KODI MEDIA CENTER ?"
+msgstr "¿QUIERES LANZAR EL CENTRO MULTIMEDIA KODI?"
+
+msgid "ENABLE WIFI"
+msgstr "ACTIVAR EL WIFI"
+
+msgid "NETWORK SETTINGS"
+msgstr "CONFIGURACIÓN DE RED"
+
+msgid "WIFI ENABLED"
+msgstr "WIFI ACTIVADO"
+
+msgid "WIFI CONFIGURATION ERROR"
+msgstr "ERROR DE CONFIGURACIÓN WIFI"
+
+msgid "WIFI KEY"
+msgstr "CLAVE WIFI"
+
+msgid "WIFI SSID"
+msgstr "SSID WIFI"
+
+msgid "GAME RATIO"
+msgstr "RELACIÓN DE ASPECTO"
+
+# Config controllers missing translation
+msgid "PRESS ANYTHING"
+msgstr "PULSA CUALQUIER BOTÓN"
+
+msgid "-NOT DEFINED-"
+msgstr "-SIN CONFIGURAR-"
+
+msgid "ALREADY TAKEN"
+msgstr "EN USO"
+
+msgid "HOLD FOR "
+msgstr "MANTEN PARA"
+
+msgid "S TO SKIP"
+msgstr "S PARA SALTAR"
+
+msgid "HOLD ANY BUTTON TO SKIP"
+msgstr "MANTEN CUALQUIER BOTÓN PARA SALTAR"
+
+msgid "JOYSTICK UP"
+msgstr "JOYSTICK ARRIBA"
+
+msgid "JOYSTICK LEFT"
+msgstr "JOYSTICK IZQUIERDA"
 
 msgid "I18NMESSAGECONTROLLERS"
-msgstr "YOU ARE GOING TO CONFIGURE A CONTROLLER. IF YOU HAVE ONLY ONE JOYSTICK, CONFIGURE THE DIRECTIONS KEYS AND SKIP JOYSTICK CONFIG BY HOLDING A BUTTON. IF YOU DO NOT HAVE A SPECIAL KEY FOR HOTKEY, CHOOSE THE SELECT BUTTON. SKIP ALL BUTTONS YOu DO NOT HAVE BY HOLDING A KEY."
+msgstr ""
+"VAS A CONFIGURAR UN CONTROLADOR. SI SOLO TIENES UN JOYSTICK CONFIGURA LAS "
+"DIRECCIONES E IGNORA LAS CONFIGURACIÓN DE JOYSTICK MANTENIENDO UN BOTÓN. SI "
+"NO TIENES UN BOTÓN ESPECIAL PARA LA HOTKEY UTILIZA EL SELECT. IGNORA LOS "
+"BOTONES QUE NO EXISTAN EN TU CONTROLADOR MANTENIENDO UNA TECLA PULSADA."
+
+# TEXT EDITING
+msgid "EDIT"
+msgstr "EDITAR"
+
+msgid "STOP EDITING"
+msgstr "DEJAR DE EDITAR"
+
+msgid "MOVE CURSOR"
+msgstr "MOVER EL CURSOR"
+
+msgid "DISCARD CHANGES"
+msgstr "DESCARTAR LOS CAMBIOS"
+
+# MISSING SCRAPPER TRANSLATIONS
+msgid "Only missing image"
+msgstr "Solo imágenes faltantes"
+
+msgid "All Games"
+msgstr "Todos los juegos"
+
+msgid "accept"
+msgstr "Aceptar"
+
+msgid " SELECTED"
+msgstr " SELECCIONADOS"
+
+msgid "accept result"
+msgstr "aceptar"
+
+msgid "stop (progress saved)"
+msgstr "parar (progreso guardado)"
+
+msgid "search"
+msgstr "buscar"
+
+msgid "GAME"
+msgstr "JUEGO"
+
+# PLURAL FOR GAME(S)
+msgid "S"
+msgstr "X"
+
+msgid " OF "
+msgstr " DE "
+
+msgid "NO GAMES WERE SCRAPED."
+msgstr "NO SE OBTUVO NINGÚN JUEGO."
+
+msgid " SUCCESSFULLY SCRAPED!"
+msgstr " OBTENIDOS!"
+
+msgid " SKIPPED."
+msgstr " IGNORADOS."
