--- a/projects/frontend/locale/lang/it/LC_MESSAGES/emulationstation2.po
+++ b/projects/frontend/locale/lang/it/LC_MESSAGES/emulationstation2.po
@@ -87,7 +87,7 @@ msgstr "INFORMAZIONI VOTI"
 msgid "SOUND SETTINGS"
 msgstr "OPZIONI SONORO"
 msgid "SYSTEM VOLUME"
-msgstr "VOLUME DEL SISTEMA"
+msgstr "VOLUME DI SISTEMA"
 msgid "ENABLE SOUNDS"
 msgstr "ABILITA SUONI"
 msgid "UI SETTINGS"
@@ -95,7 +95,7 @@ msgstr "OPZIONI DELL'INTERFACCIA"
 msgid "SCREENSAVER AFTER"
 msgstr "SALVASCHERMO DOPO"
 msgid "TRANSITION STYLE"
-msgstr "TIPO DI TRANSIZIONE"
+msgstr "STILE TRANSIZIONE"
 msgid "SCREENSAVER BEHAVIOR"
 msgstr "COMPORTAMENTO DEL SALVASCHERMO"
 msgid "SHOW FRAMERATE"
@@ -117,7 +117,7 @@ msgstr "RIAVVIO"
 msgid "REALLY SHUTDOWN?"
 msgstr "SPEGNERE ?"
 msgid "SHUTDOWN SYSTEM"
-msgstr "STO SPEGNENDO"
+msgstr "IN CHIUSURA"
 msgid "REALLY QUIT?"
 msgstr "USCIRE ?"
 msgid "QUIT EMULATIONSTATION"
@@ -126,7 +126,7 @@ msgstr "ESCI DA EMULATIONSTATION"
 
 #: es-app/src/guis/GuiScraperStart.cpp
 msgid "SCRAPE NOW"
-msgstr "RACCOLGO INFORMAZIONI"
+msgstr "RACCOLTA INFORMAZIONI"
 msgid "USER DECIDES ON CONFLICTS"
 msgstr "L'UTENTE GESTISCE I CONFLITTI"
 msgid "SYSTEMS"
@@ -153,33 +153,33 @@ msgstr "NESSUN GIOCO TROVATO - SALTA"
 
 #: Buttons
 msgid "close"
-msgstr "chiudere"
+msgstr "chiudi"
 msgid "select"
-msgstr "selezionare"
+msgstr "seleziona"
 msgid "choose"
 msgstr "scegli"
 msgid "back"
 msgstr "indietro"
 msgid "CLOSE"
-msgstr "CHIUDERE"
+msgstr "CHIUDI"
 msgid "SELECT"
-msgstr "SELEZIONARE"
+msgstr "SELEZIONA"
 msgid "CHOOSE"
 msgstr "SCEGLIERE"
 msgid "BACK"
 msgstr "INDIETRO"
 msgid "LAUNCH"
-msgstr "LANCIA"
+msgstr "AVVIA"
 msgid "SYSTEM"
 msgstr "SISTEMA"
 msgid "INPUT"
 msgstr "MODIFICA"
 msgid "SKIP"
-msgstr "SALTARE"
+msgstr "SALTA"
 msgid "CHANGE"
-msgstr "MODIFICARE"
+msgstr "MODIFICA"
 msgid "SAVE"
-msgstr "SALVARE"
+msgstr "SALVA"
 msgid "CANCEL"
 msgstr "CANCELLA"
 msgid "DELETE"
@@ -221,7 +221,7 @@ msgstr "PREMI ESC PER ANNULLARE"
 
 #: es-core/src/guis/GuiInputConfig.cpp
 msgid "CONFIGURING"
-msgstr "CONFIGURANDO"
+msgstr "CONFIGURAZIONE"
 msgid "UP"
 msgstr "SU"
 msgid "DOWN"
@@ -256,18 +256,18 @@ msgstr "AGGIORNAMENTO FALLITO, IL SISTEMA VERRA' RIAVVIATO"
 
 #GUIMENU
 msgid "CONFIGURE A CONTROLLER"
-msgstr "CONFIGURARE UN GAMEPAD"
+msgstr "CONFIGURARE UN CONTROLLER"
 msgid "INPUT P1"
-msgstr "GAMEPAD G1"
+msgstr "GAMEPAD/JOY G1"
 msgid "INPUT P2"
-msgstr "GAMEPAD G2"
+msgstr "GAMEPAD/JOY G2"
 msgid "INPUT P3"
-msgstr "GAMEPAD G3"
+msgstr "GAMEPAD/JOY G3"
 msgid "INPUT P4"
-msgstr "GAMEPAD G4"
+msgstr "GAMEPAD/JOY G4"
 
 msgid "NOGAMEERRORMESSAGE"
-msgstr "NON E' STATO TROVATO NESSUN GIOCO"
+msgstr "NON E' STATO TROVATO ALCUN GIOCO"
 
 msgid "LANGUAGE"
 msgstr "LINGUA"
@@ -307,7 +307,7 @@ msgid "DO YOU WANT TO START KODI MEDIA CENTER ?"
 msgstr "VUOI ESEGUIRE KODI MEDIA CENTER?"
 
 msgid "ENABLE WIFI"
-msgstr "ATTIVARE WIFI"
+msgstr "ATTIVA WIFI"
 
 msgid "NETWORK SETTINGS"
 msgstr "OPZIONI DI RETE"
@@ -350,20 +350,20 @@ msgstr "STAI PER CONFIGURARE UN GAMEPAD. SE POSSIEDI UN GAMEPAD DOTATO SOLTANTO 
 
 #TEXT EDITING
 msgid "EDIT"
-msgstr "MODIFICARE"
+msgstr "MODIFICA"
 msgid "STOP EDITING"
 msgstr "FINE MODIFICA"
 msgid "MOVE CURSOR"
 msgstr "MUOVERE IL CURSORE"
 msgid "DISCARD CHANGES"
-msgstr "ANNULARE LA MODIFICA"
+msgstr "ANNULARE LE MODIFICHE"
 
 # MISSING SCRAPPER TRANSLATIONS
 msgid "Only missing image"
 msgstr "Solo immagini mancanti"
 
 msgid "All Games"
-msgstr "Tutti i giochi"
+msgstr "Tutti i Giochi"
 
 msgid "accept"
 msgstr "OK"
@@ -378,7 +378,7 @@ msgid "stop (progress saved)"
 msgstr "stop (progressi salvati)"
 
 msgid "search"
-msgstr "cercare"
+msgstr "cerca"
 
 msgid "GAME"
 msgstr "GIOCO"
